--- a/stock_picking_report/reports/stock_picking_report_template.xml
+++ b/stock_picking_report/reports/stock_picking_report_template.xml
@@ -15,52 +15,38 @@
         <template id="report_stock_picking_template">
             <t t-call="web.basic_layout">
                 <t t-foreach="docs" t-as="doc">
-                    <div style="font-size: 10px; line-height: 1.2;">
+                    <div style="font-size: 20px; line-height: 1.2;">
                         <h4 style="text-align: center;">Weighing Label</h4>
                         <table style="width: 100%; table-layout: fixed;">
                             <tr>
-                                <td style="width: 50%;">Product:</td>
-                                <td style="width: 50%;"><span t-esc="doc.product_id.name"/></td>
+                                <td style="width: 50%;">Product: <span t-esc="doc.product_id.name"/> </td>
+                                <td style="width: 50%;"> ID: <span t-esc="doc.product_id.id"/></td>
+                            </tr>
+
+                            <tr>
+                                <td>Batch No: <span t-esc="doc.lot_ids.display_name"/></td>
+                                <td> </td>
                             </tr>
                             <tr>
-                                <td>ID:</td>
-                                <td><span t-esc="doc.product_id.id"/></td>
-                            </tr>
-                            <tr>
-                                <td>Batch No:</td>
-                                <td><span t-esc="doc.lot_ids.display_name"/></td>
-                            </tr>
-                            <tr>
-                                <td>Item:</td>
-                                <td><span t-esc="doc.product_id.name"/></td>
+                                <td>Item: <span t-esc="doc.product_id.name"/></td>
+                                <td>ID: <span t-esc="doc.product_id.id"/></td>
                             </tr>
                             <tr>
                                 <td>Exp:</td>
-                                <td> </td>
-                            </tr>
-                            <tr>
                                 <td>Control No:</td>
-                                <td> </td>
                             </tr>
                             <tr>
+                                <td>Actual:<span t-esc="doc.quantity"/> <span t-esc="doc.product_uom.name"/></td>
                                 <td>Theoretical:</td>
-                                <td> </td>
-                            </tr>
-                            <tr>
-                                <td>Actual:</td>
-                                <td><span t-esc="doc.quantity"/> <span t-esc="doc.product_uom.name"/></td>
                             </tr>
                             <tr>
                                 <td>Dispenser:</td>
-                                <td> </td>
-                            </tr>
-                            <tr>
                                 <td>IPC:</td>
-                                <td> </td>
                             </tr>
+            
                             <tr>
-                                <td>Date:</td>
-                                <td><span t-field="doc.time_printing"/></td>
+                                <td>Date:<span t-fProductield="doc.time_printing"/></td>
+                                <td></td>
                             </tr>
                             
                         </table>
