--- a/stock_picking_report/views/stock_picking_views.xml
+++ b/stock_picking_report/views/stock_picking_views.xml
@@ -20,5 +20,13 @@
                 </xpath>
             </field>
         </record>
+        
+        <record id="device_selection_wizard_action" model="ir.actions.act_window">
+        <field name="name">Select Device</field>
+        <field name="res_model">device.selection.wizard</field>
+        <field name="view_mode">form</field>
+        <field name="target">new</field>
+        </record>
+
     </data>
 </odoo>
