--- a/stock_picking_report/views/stock_picking_views.xml
+++ b/stock_picking_report/views/stock_picking_views.xml
@@ -12,7 +12,8 @@
                     <!-- Add the external unit field after the external weight field -->
                     <field name="external_unit"/>
                     <!-- Add a button to fetch and print the report -->
-                    <button name="selected_device_id"
+                    <field name="selected_device_id"/>
+                    <button name="action_print_report"
                             icon="fa-tag"
                             type="object"
                             title="Fetch weight from IoT device"
