--- a/stock_picking_report/views/stock_picking_views.xml
+++ b/stock_picking_report/views/stock_picking_views.xml
@@ -22,6 +22,13 @@
             </field>
         </record>
         
+        <record id="action_scale_connection_wizard" model="ir.actions.act_window">
+        <field name="name">Scale Connection Wizard</field>
+        <field name="res_model">scale.connection.wizard</field>
+        <field name="view_mode">form</field>
+        <field name="target">new</field>
+        </record>
+
        <!-- Action to open the wizard -->
        <!--  <record id="device_selection_wizard_action" model="ir.actions.act_window">
         <field name="name">Select Device</field>
