--- a/stock_picking_report/views/wizard_form.xml
+++ b/stock_picking_report/views/wizard_form.xml
@@ -1,18 +1,29 @@
-<record id="view_scale_connection_wizard_form" model="ir.ui.view">
-    <field name="name">scale.connection.wizard.form</field>
-    <field name="model">scale.connection.wizard</field>
-    <field name="arch" type="xml">
-        <form string="Scale Connection Error">
-            <sheet>
-                <label for="message" string="Error Details" align="0.0"/>
-                <div>
-                    <field name="message" readonly="1" nolabel="1"/>
-                </div>
-            </sheet>
-            <footer>
-                <button name="action_print_empty" type="object" string="Print Empty" class="btn-primary"/>
-                <button name="action_cancel" type="object" string="Cancel" class="btn-secondary"/>
-            </footer>
-        </form>
-    </field>
-</record>
+<odoo>
+    <!-- Form View for Scale Connection Wizard -->
+    <record id="view_scale_connection_wizard_form" model="ir.ui.view">
+        <field name="name">scale.connection.wizard.form</field>
+        <field name="model">scale.connection.wizard</field>
+        <field name="arch" type="xml">
+            <form string="Scale Connection Error">
+                <sheet>
+                    <label for="message" string="Error Details" align="0.0"/>
+                    <div>
+                        <field name="message" readonly="1" nolabel="1"/>
+                    </div>
+                </sheet>
+                <footer>
+                    <button name="action_print_empty" type="object" string="Print Empty" class="btn-primary"/>
+                    <button name="action_cancel" type="object" string="Cancel" class="btn-secondary"/>
+                </footer>
+            </form>
+        </field>
+    </record>
+
+    <!-- Action for Scale Connection Wizard -->
+    <record id="action_scale_connection_wizard" model="ir.actions.act_window">
+        <field name="name">Scale Connection Wizard</field>
+        <field name="res_model">scale.connection.wizard</field>
+        <field name="view_mode">form</field>
+        <field name="target">new</field>
+    </record>
+</odoo>
