--- a/odoo_device/views/connection_views.xml
+++ b/odoo_device/views/connection_views.xml
@@ -46,8 +46,8 @@
         <field name="model_id" ref="model_devices_connection"/>
         <field name="state">code</field>
         <field name="code">model.refresh_connections_cron()</field>
-        <field name="interval_number">1</field>
-        <field name="interval_type">minutes</field> <!-- Changed from 'seconds' to 'minutes' -->
+        <field name="interval_number">30</field>
+        <field name="interval_type">seconds</field> 
         <field name="numbercall">-1</field>
         <field name="active">True</field>
     </record>
