--- a/odoo_device/views/connection_views.xml
+++ b/odoo_device/views/connection_views.xml
@@ -25,6 +25,7 @@
                 <field name="device_id"/>
                 <field name="url"/>
                 <field name="status"/>
+                <field name="last_checked"/>
                 <field name="active" invisible="1"/>
             </tree>
         </field>
@@ -61,6 +62,7 @@
                         </group>
                         <group>
                             <field name="status" readonly="1"/>
+                            <field name="last_checked" readonly="1"/>
                             <field name="active" invisible="1"/>
                         </group>
                     </group>
@@ -110,6 +112,7 @@
                 <field name="device_id"/>
                 <field name="status"/>
                 <field name="url"/>
+                <field name="last_checked"/>
                 <templates>
                     <t t-name="kanban-box">
                         <div t-attf-class="oe_kanban_global_click">
@@ -125,6 +128,7 @@
                                 <ul>
                                     <li>Device: <field name="device_id"/></li>
                                     <li>URL: <field name="url"/></li>
+                                    <li>Last Checked: <field name="last_checked"/></li>
                                 </ul>
                             </div>
                         </div>
