--- a/stock_picking_report/reports/stock_picking_report_template.xml
+++ b/stock_picking_report/reports/stock_picking_report_template.xml
@@ -19,31 +19,31 @@
             <div style="font-size: 18px; line-height: 2;">
                 <h4 style="font-size: 22px; text-align: center; font-weight: bold;">Weighing Label</h4>
                 <table style="width: 100%; table-layout: fixed;">
-                    <tr style="border: none; visibility: hidden;">
+                    <tr style="border: none;">
                         <td style="width: 50%; font-weight: bold;">Product: <span t-esc="doc.product_id.name"/></td>
                         <td style="width: 50%; font-weight: bold;">ID: <span t-esc="doc.product_id.id"/></td>
                     </tr>
-                    <tr style="border: none; visibility: hidden;">
+                    <tr style="border: none; ">
                         <td style="font-weight: bold;">Batch No: <span t-esc="doc.lot_ids.display_name"/></td>
                         <td></td>
                     </tr>
-                    <tr style="border: none; visibility: hidden;">
+                    <tr style="border: none;  ">
                         <td style="font-weight: bold;">Item: <span t-esc="doc.product_id.name"/></td>
                         <td style="font-weight: bold;">ID: <span t-esc="doc.product_id.id"/></td>
                     </tr>
-                    <tr style="border: none; visibility: hidden;">
+                    <tr style="border: none; ">
                         <td style="font-weight: bold;">Exp:</td>
                         <td style="font-weight: bold;">Control No:</td>
                     </tr>
-                    <tr style="border: none; visibility: hidden;">
+                    <tr style="border: none; ">
                         <td style="font-weight: bold;">Actual: <span t-esc="doc.external_weight"/> <span t-esc="doc.external_unit"/></td>
                         <td style="font-weight: bold;">Theoretical: <span t-esc="doc.quantity"/> <span t-esc="doc.product_uom.name"/></td>
                     </tr>
-                    <tr style="border: none; visibility: hidden;">
+                    <tr style="border: none; ">
                         <td style="font-weight: bold;">Dispenser:</td>
                         <td style="font-weight: bold;">IPC:</td>
                     </tr>
-                    <tr style="border: none; visibility: hidden;">
+                    <tr style="border: none; en;">
                         <td style="font-weight: bold;">Date:<span t-esc="doc.time_printing"/></td>
                         <td></td>
                     </tr>
