--- a/stock_picking_report/reports/stock_picking_report_template.xml
+++ b/stock_picking_report/reports/stock_picking_report_template.xml
@@ -1,12 +1,12 @@
 <odoo>
     <data>
-        <!-- Define Label Paper Format -->
-        <record id="paperformat_label_9_5_4_5" model="report.paperformat">
-            <field name="name">Label 9.5x4.5</field>
+        <!-- Define Label Paper Format (Portrait Orientation) -->
+        <record id="paperformat_label_4_5_9_5" model="report.paperformat">
+            <field name="name">Label 4.5x9.5 Portrait</field>
             <field name="default" eval="False"/>
             <field name="format">custom</field>
-            <field name="page_height">45</field> <!-- Height in mm -->
-            <field name="page_width">95</field> <!-- Width in mm -->
+            <field name="page_height">95</field> <!-- Height in mm -->
+            <field name="page_width">45</field> <!-- Width in mm -->
             <field name="margin_top">2</field>
             <field name="margin_bottom">2</field>
             <field name="margin_left">2</field>
@@ -17,30 +17,30 @@
         <template id="report_stock_picking_template">
             <t t-call="web.basic_layout">
                 <t t-foreach="docs" t-as="doc">
-                    <div style="font-size: 14px; line-height: 1.2; text-align: left;">
-                        <h4 style="font-size: 16px; text-align: center; font-weight: bold; margin-bottom: 5px;">Weighing Label</h4>
-                        <table style="width: 100%; table-layout: fixed; font-size: 12px;">
-                            <tr>
-                                <td style="width: 50%; font-weight: bold;">Product:</td>
+                    <div style="font-size: 12px; line-height: 1.2; text-align: left;">
+                        <h4 style="font-size: 14px; text-align: center; font-weight: bold; margin-bottom: 5px;">Weighing Label</h4>
+                        <table style="width: 100%; table-layout: fixed; font-size: 11px; border: none;">
+                            <tr style="border: none;">
+                                <td style="font-weight: bold;">Product:</td>
                                 <td><span t-esc="doc.product_id.name"/></td>
                             </tr>
-                            <tr>
+                            <tr style="border: none;">
                                 <td style="font-weight: bold;">ID:</td>
                                 <td><span t-esc="doc.product_id.id"/></td>
                             </tr>
-                            <tr>
+                            <tr style="border: none;">
                                 <td style="font-weight: bold;">Batch No:</td>
                                 <td><span t-esc="doc.lot_ids.display_name"/></td>
                             </tr>
-                            <tr>
+                            <tr style="border: none;">
                                 <td style="font-weight: bold;">Actual:</td>
                                 <td><span t-esc="doc.external_weight"/> <span t-esc="doc.external_unit"/></td>
                             </tr>
-                            <tr>
+                            <tr style="border: none;">
                                 <td style="font-weight: bold;">Theoretical:</td>
                                 <td><span t-esc="doc.quantity"/> <span t-esc="doc.product_uom.name"/></td>
                             </tr>
-                            <tr>
+                            <tr style="border: none;">
                                 <td style="font-weight: bold;">Date:</td>
                                 <td><span t-esc="doc.time_printing"/></td>
                             </tr>
@@ -56,7 +56,7 @@
             <field name="model">stock.move</field>
             <field name="report_type">qweb-pdf</field>
             <field name="report_name">stock_picking_report.report_stock_picking_template</field>
-            <field name="paperformat_id" ref="paperformat_label_9_5_4_5"/>
+            <field name="paperformat_id" ref="paperformat_label_4_5_9_5"/>
         </record>
     </data>
 </odoo>
