--- a/stock_picking_report/reports/stock_picking_report_template.xml
+++ b/stock_picking_report/reports/stock_picking_report_template.xml
@@ -20,27 +20,27 @@
                     <div style="font-size: 12px; line-height: 1.2; text-align: left;">
                         <h4 style="font-size: 14px; text-align: center; font-weight: bold; margin-bottom: 5px;">Weighing Label</h4>
                         <table style="width: 100%; table-layout: fixed; font-size: 11px; border: none;">
-                            <tr style="border: none;">
+                            <tr style="border-collapse: collapse; border: none;">
                                 <td style="font-weight: bold;">Product:</td>
                                 <td><span t-esc="doc.product_id.name"/></td>
                             </tr>
-                            <tr style="border: none;">
+                            <tr style="border-collapse: collapse; border: none;">
                                 <td style="font-weight: bold;">ID:</td>
                                 <td><span t-esc="doc.product_id.id"/></td>
                             </tr>
-                            <tr style="border: none;">
+                            <tr style="border-collapse: collapse; border: none;">
                                 <td style="font-weight: bold;">Batch No:</td>
                                 <td><span t-esc="doc.lot_ids.display_name"/></td>
                             </tr>
-                            <tr style="border: none;">
+                            <tr style="border-collapse: collapse; border: none;">
                                 <td style="font-weight: bold;">Actual:</td>
                                 <td><span t-esc="doc.external_weight"/> <span t-esc="doc.external_unit"/></td>
                             </tr>
-                            <tr style="border: none;">
+                            <tr style="border-collapse: collapse; border: none;">
                                 <td style="font-weight: bold;">Theoretical:</td>
                                 <td><span t-esc="doc.quantity"/> <span t-esc="doc.product_uom.name"/></td>
                             </tr>
-                            <tr style="border: none;">
+                            <tr style="border-collapse: collapse; border: none;">
                                 <td style="font-weight: bold;">Date:</td>
                                 <td><span t-esc="doc.time_printing"/></td>
                             </tr>
