--- a/stock_picking_report/views/stock_picking_views.xml
+++ b/stock_picking_report/views/stock_picking_views.xml
@@ -17,7 +17,7 @@
                             icon="fa-tag"
                             type="object"
                             title="Fetch weight from IoT device"
-                              invisible="['&', '&', '&', 
+                            invisible="['&amp;', '&amp;', '&amp;', 
                 ('picking_type_id', '=', 6), 
                 ('location_id', '=', 203), 
                 ('location_dest_id', '=', 17), 
