--- a/stock_picking_report/reports/stock_picking_report_template.xml
+++ b/stock_picking_report/reports/stock_picking_report_template.xml
@@ -21,11 +21,11 @@
                         <h4 style="font-size: 14px; text-align: center; font-weight: bold; margin-bottom: 5px;">Weighing Label</h4>
                         <table style="width: 100%; table-layout: fixed; font-size: 11px; border: none;">
                             <tr style="border-collapse: collapse; border: none;">
-                                <td style="font-weight: bold;">Product:  <span t-esc="doc.mrp_product_id.name"/> </td>
-                                <td> ID: <span t-esc="doc.mrp_product_id.id"/></td>
+                                <td style="font-weight: bold;">Product:  <span t-esc="doc.product_id.name"/></td>
+                                <td> ID:<span t-esc="doc.product_id.id"/></td>
                             </tr>
                             <tr style="border-collapse: collapse; border: none;">
-                               <td style="font-weight: bold;">Batch No:  <span t-esc="doc.batch_number"/></td>
+                               <td style="font-weight: bold;">Batch No:  </td>
                                <td>  </td>
 
                             </tr>
@@ -35,7 +35,7 @@
                             </tr>
 
                             <tr style="border-collapse: collapse; border: none;">
-                                <td>Exp:<span t-esc="doc.exp_date"/> </td>
+                                <td>Exp: </td>
                                 <td>Control No: <span t-esc="doc.lot_ids.id"/></td>
                             </tr>
                             <tr>
