--- a/stock_picking_report/reports/stock_picking_report_template.xml
+++ b/stock_picking_report/reports/stock_picking_report_template.xml
@@ -21,39 +21,28 @@
                         <h4 style="font-size: 14px; text-align: center; font-weight: bold; margin-bottom: 5px;">Weighing Label</h4>
                         <table style="width: 100%; table-layout: fixed; font-size: 11px; border: none;">
                             <tr style="border-collapse: collapse; border: none;">
-                                <td style="font-weight: bold;">Product:  <span t-esc="doc.product_id.name"/> </td>
-                                <td> ID: <span t-esc="doc.product_id.id"/> </td>
+                                <td style="font-weight: bold;">Product:</td>
+                                <td><span t-esc="doc.product_id.name"/></td>
                             </tr>
                             <tr style="border-collapse: collapse; border: none;">
-                               <td style="font-weight: bold;">Batch No:  <span t-esc="doc.lot_ids.display_name"/></td>
-                               <td>  </td>
-
+                                <td style="font-weight: bold;">ID:</td>
+                                <td><span t-esc="doc.product_id.id"/></td>
                             </tr>
                             <tr style="border-collapse: collapse; border: none;">
-                                <td style="font-weight: bold;">Item: <span t-esc="doc.product_id.name"/></td>
-                                <td> ID: <span t-esc="doc.product_id.id"/> </td>
-                            </tr>
-
-                            <tr style="border-collapse: collapse; border: none;">
-                                <td>Exp:</td>
-                                <td>Control No: </td>
-                            </tr>
-                            <tr>
-                            <tr style="border-collapse: collapse; border: none;">
-                                <td style="font-weight: bold;">Actual: <span t-esc="doc.external_weight"/> <span t-esc="doc.external_unit"/> </td>
-                                <td style="font-weight: bold;">Theoretical:<span t-esc="doc.quantity"/> <span t-esc="doc.product_uom.name"/></td>
+                                <td style="font-weight: bold;">Batch No:</td>
+                                <td><span t-esc="doc.lot_ids.display_name"/></td>
                             </tr>
                             <tr style="border-collapse: collapse; border: none;">
-                                <td style="font-weight: bold;">Dispenser:</td>
-                                <td style="font-weight: bold;">IPC: </td>
+                                <td style="font-weight: bold;">Actual:</td>
+                                <td><span t-esc="doc.external_weight"/> <span t-esc="doc.external_unit"/></td>
                             </tr>
-                            <tr style="border-collapse: collapse; border: none;">
-                                <td style="font-weight: bold;">Date:<span t-esc="doc.time_printing"/></td>
+                            <tr style="border: none;">
+                                <td style="font-weight: bold;">Theoretical:</td>
+                                <td><span t-esc="doc.quantity"/> <span t-esc="doc.product_uom.name"/></td>
+                            </tr>
+                            <tr style="border: none;">
+                                <td style="font-weight: bold;">Date:</td>
                                 <td><span t-esc="doc.time_printing"/></td>
-                            </tr>
-                            <tr style="border-collapse: collapse; border: none;">
-                                <td style="font-weight: bold;">QAP-09-052 </td>
-                                <td style="font-weight: bold;"> </td>
                             </tr>
                         </table>
                     </div>
